--- a/app/styles/components/_todo.scss
+++ b/app/styles/components/_todo.scss
@@ -7,7 +7,8 @@
     position: relative;
 
     .complete, .remove {
-        left: 0;bottom: 0;
+        bottom: 0;
+        left: 0;
         margin: auto;
         position: absolute;
         top: 0;
@@ -33,7 +34,9 @@
     }
 
     &.completed {
+        opacity: 0.6;
         input {
+            background: transparent;;
             text-decoration: line-through;
         }
     }
