images, gulp, docs
add new background images
update the gulpfile to do a clean during build
add docs folder

--- a/app/styles/components/_images.scss
+++ b/app/styles/components/_images.scss
@@ -2,14 +2,20 @@
 ---------------------------------------------------------------------- */
 
 @include wallpaper(
+    arches,
     brickwall,
     cream_pixels,
     crossword,
     dimension,
+    gplaypattern,
     greyzz,
+    grunge_wall,
+    large_leather,
+    linedpaper,
     ps_neutral,
     dimension,
     pw_pattern,
+    tiny_grid,
     tree_bark,
     wet_snow
 );
